--- a/html/thema/css/07 copy.css
+++ b/html/thema/css/07 copy.css
@@ -265,7 +265,7 @@
 .themaWrap .swiperArea.style02 .slideTit .infoList {padding: 20px 20px; border: 3px solid #71b1ff; border-radius: 20px; gap: 4px 0;}
 .themaWrap .swiperArea .slideTit ul li { display: block; } 
 .themaWrap .swiperArea .slideTit li strong { min-width: 100%; height: 30px; padding-top: 0; margin-right: 0; margin-bottom: 10px; font-size: 14px; } 
-.themaWrap .swiperArea .slideTit li p { font-size: 14px; text-align: center; } 
+.themaWrap .swiperArea .slideTit li p { font-size: 12px; text-align: center; } 
 .themaWrap .swiperArea .slideItem { padding: 0 0 30px; } 
 .themaWrap .swiperArea .slideItem li { padding: 2px; border: 2px solid #ffc9c7; border-radius: 20px; } 
 .themaWrap .swiperArea .slideItem li p { font-size: 14px; word-break: keep-all; } 
@@ -308,4 +308,5 @@
 .themaWrap .cont03 .tabList02 a::before { height: 50px; margin-bottom: 10px; background-size: cover !important; background-position: center !important; } 
 .themaWrap .cont03 .tabList02 p { font-size: 18px; letter-spacing: -1px; } 
 .themaWrap .cont03 .tabList02 span { display: block; font-size: 12px; } 
+.themaWrap .swiperArea.style02 .slideTit ul {gap: 10px 0;}
 }
