--- a/html/thema/css/07 copy.css
+++ b/html/thema/css/07 copy.css
@@ -261,8 +261,8 @@
 .themaWrap .titWrap { margin-bottom: 20px; } 
 .themaWrap .swiperArea .slideTit { margin-bottom: 20px; } 
 .themaWrap .swiperArea .slideTit h4 { margin-bottom: 20px; font-size: 30px; line-height: 30px; } 
-.themaWrap .swiperArea .slideTit .infoList {padding: 20px 20px; border: 3px solid #ff8b87; border-radius: 20px; gap: 4px 0;}
-.themaWrap .swiperArea.style02 .slideTit .infoList {padding: 20px 20px; border: 3px solid #71b1ff; border-radius: 20px; gap: 4px 0;}
+.themaWrap .swiperArea .slideTit .infoList {padding: 20px 20px; border: 2px solid #ff8b87; border-radius: 20px; ;}
+.themaWrap .swiperArea.style02 .slideTit .infoList {padding: 20px 20px; border: 2px solid #71b1ff; border-radius: 20px;}
 .themaWrap .swiperArea .slideTit ul li { display: block; } 
 .themaWrap .swiperArea .slideTit li strong { min-width: 100%; height: 30px; padding-top: 0; margin-right: 0; margin-bottom: 10px; font-size: 14px; } 
 .themaWrap .swiperArea .slideTit li p { font-size: 12px; text-align: center; } 
