--- a/html/thema/css/07 copy.css
+++ b/html/thema/css/07 copy.css
@@ -123,8 +123,8 @@
 .themaWrap .cont03 .tabItem .tabList01 li:nth-child(6) a::before { background: url(https://chaebonggi.github.io/jobabamain/html/thema/images/20240731/list01_icon06.png) center no-repeat; } 
 
 .themaWrap .cont03 .tabItem ul a::after { content: ''; width: 68px; height: 68px; position: absolute; bottom: -34px; left: 50%; transform: translateX(-50%); background: url(https://chaebonggi.github.io/jobabamain/html/thema/images/20240731/list_btn.png) no-repeat; } 
-.themaWrap .cont03 .tabItem .tabList01 a p { min-height: 80px; margin-bottom: 10px; color: #ff921e; font-size: 36px; text-align: center; line-height: 1.1; } 
-.themaWrap .cont03 .tabItem .tabList01 a span { color: #000; font-size: 22px; letter-spacing: -1px; } 
+.themaWrap .cont03 .tabItem .tabList01 a p {display: flex; min-height: 80px; margin-bottom: 10px; color: #ff921e; font-size: 36px; text-align: center; line-height: 1.1; align-items: center; justify-content: center;} 
+.themaWrap .cont03 .tabItem .tabList01 a span {display: flex; min-height: 55px; color: #000; font-size: 22px; letter-spacing: -1px; align-items: center; justify-content: center;} 
 .themaWrap .cont03 .tabList02 { display: flex; max-width: 782px; margin: 0 auto; justify-content: space-between; flex-wrap: wrap; gap: 70px 54px; } 
 .themaWrap .cont03 .tabList02 li { width: calc(100% / 2 - 27px); } 
 .themaWrap .cont03 .tabList02 a { display: block; padding: 18px; min-height: 367px; background: #fff; position: relative; border-radius: 50px; box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.1); text-align: center; } 
@@ -133,7 +133,7 @@
 .themaWrap .cont03 .tabList02 li:nth-child(2) a::before { background: url(https://chaebonggi.github.io/jobabamain/html/thema/images/20240731/list_img02.png) top center no-repeat; } 
 .themaWrap .cont03 .tabList02 li:nth-child(3) a::before { background: url(https://chaebonggi.github.io/jobabamain/html/thema/images/20240731/list_img03.png) top center no-repeat; } 
 .themaWrap .cont03 .tabList02 li:nth-child(4) a::before { background: url(https://chaebonggi.github.io/jobabamain/html/thema/images/20240731/list_img04.png) top center no-repeat; } 
-.themaWrap .cont03 .tabList02 p { margin-bottom: 10px; color: #0059c8; font-size: 36px; line-height: 1.1; } 
+.themaWrap .cont03 .tabList02 p {display: flex; min-height: 80px; margin-bottom: 10px; color: #0059c8; font-size: 36px; line-height: 1.1; align-items: center; justify-content: center;} 
 .themaWrap .cont03 .tabList02 span { color: #000; font-size: 22px; letter-spacing: -1px; } 
 
 
@@ -231,9 +231,10 @@
 .themaWrap .cont03 .tabList02 { gap: 60px 20px; } 
 .themaWrap .cont03 .tabList02 li { width: calc(100% / 2 - 10px); } 
 .themaWrap .cont03 .tabList02 a::before { height: 92px; background-size: initial !important; border-radius: 20px 20px 0 0; } 
-.themaWrap .cont03 .tabList02 p { font-size: 28px; } 
+.themaWrap .cont03 .tabList02 p {min-height: 60px; font-size: 28px; } 
 .themaWrap .cont03 .tabList02 a { min-height: 320px; } 
 .themaWrap .cont03 .innerSection { padding: 0 0 60px; } 
+.themaWrap .cont03 .tabItem .tabList01 a p {min-height: 68px;}
 }
 @media all and (max-width:640px){
  .themaWrap .for_mo { display: none; } 
@@ -291,12 +292,12 @@
 .themaWrap .cont03 .tabItem .tabList01 { gap: 30px 4px; } 
 .themaWrap .cont03 .tabItem .tabList01 li { width: calc(100% / 2 - 2px); } 
 .themaWrap .cont03 .tabItem .tabList01 a p { min-height: 44px; margin-bottom: 4px; font-size: 18px; } 
-.themaWrap .cont03 .tabItem .tabList01 a span { display: block; font-size: 12px; } 
+.themaWrap .cont03 .tabItem .tabList01 a span { min-height: 32px; font-size: 12px; } 
 .themaWrap .cont03 .tabList02 { gap: 30px 4px; } 
 .themaWrap .cont03 .tabList02 li { width: calc(100% / 2 - 2px); } 
 .themaWrap .cont03 .tabList02 a { padding: 4px; min-height: 180px; border-radius: 20px; } 
 .themaWrap .cont03 .tabList02 a::before { height: 50px; margin-bottom: 10px; background-size: cover !important; background-position: center !important; } 
-.themaWrap .cont03 .tabList02 p { font-size: 18px; letter-spacing: -1px; } 
+.themaWrap .cont03 .tabList02 p {min-height: 44px; font-size: 18px; letter-spacing: -1px; } 
 .themaWrap .cont03 .tabList02 span { display: block; font-size: 12px; } 
 .themaWrap .swiperArea.style02 .slideTit ul { gap: 10px 0; } 
 .themaWrap .swiperArea.style02 .slideTit li p { padding-top: 0; } 
