--- a/html/event/css/event04.css
+++ b/html/event/css/event04.css
@@ -1,4 +1,24 @@
 .eventWrap { max-width: 1920px; margin: 0 auto; } 
-.eventWrap .innerSection { max-width: 1000px; margin: 0 auto; padding: 0; } 
+.eventWrap .innerSection { max-width: 1000px; width: calc(100% - 20px); margin: 0 auto; padding: 0; } 
 .eventWrap * { font-family: 'GmarketSans','Noto Sans KR' !important; font-weight: 500; line-height: 1.3; } 
 .eventWrap .gBold { font-weight: 700; } 
+
+
+.eventWrap .evFooter { background: #001d4b; } 
+.eventWrap .evFooter .innerSection { padding: 70px 0; } 
+.eventWrap .evFooter h3 { margin-bottom: 10px; color: #fff; font-size: 24px; font-family: 'Noto Sans KR' !important; font-weight: 900; } 
+.eventWrap .evFooter li::before { content: '\00B7'; position: absolute; left: 0; top: 0; color: #fff; } 
+.eventWrap .evFooter li { position: relative; padding-left: 15px; margin-bottom: 6px; color: #fff; font-size: 16px; word-break: keep-all; font-family: 'Noto Sans KR' !important; } 
+
+.eventWrap .paging { margin: 24px 0; text-align: center; } 
+.eventWrap .paging a { display: inline-block; padding: 4px; color: #000; font-size: 16px; } 
+.eventWrap .paging a + a { margin-left: 8px; } 
+.eventWrap .paging a.current {color: #ffd51e; font-weight: 700; } 
+.eventWrap .mpaging { display: none; } 
+
+@media all and (max-width: 640px){
+    .eventWrap .paging { display: none; } 
+    .eventWrap .mpaging { display: block; margin-top: 10px; color: #000; text-align: center; } 
+    .eventWrap .mpaging a { display: inline-block; margin: 0 20px; padding: 4px 16px; background-color: #003281; color: #fff; font-size: 14px; border-radius: 4px; } 
+    .eventWrap .mpaging span { color: #ffd51e; font-weight: 700; } 
+}
